fix spacing

--- a/public/styles/components/_atom-editor.scss
+++ b/public/styles/components/_atom-editor.scss
@@ -9,4 +9,10 @@
     margin-bottom: 20px;
     border-bottom: 1px solid $color300Grey;
   }
+
+  &__section {
+    padding-bottom: 20px;
+    margin-bottom: 20px;
+    border-bottom: 1px solid $color300Grey;
+  }
 }
